added google tag

--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel">
+    < !--Google tag(gtag.js)-->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HSESCHK4W"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag () { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      const App = <>Experimental</>
+        gtag('config', 'G-5HSESCHK4W');
+      </script>
+      <script type="text/babel">
 
-      const rootElement = document.getElementById('app');
-      const root = ReactDOM.createRoot(rootElement)
-      root.render(App)
-    </script>
+
+        const App = <>Experimental</>
+
+        const rootElement = document.getElementById('app');
+        const root = ReactDOM.createRoot(rootElement)
+        root.render(App)
+      </script>
   </head>
 
   <body>
