--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    < !--Google tag(gtag.js)-->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HSESCHK4W"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag () { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HSESCHK4W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag () { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-        gtag('config', 'G-5HSESCHK4W');
-      </script>
-      <script type="text/babel">
+      gtag('config', 'G-5HSESCHK4W');
+    </script>
+    <script async src="https://www.googleoptimize.com/optimize.js?id=OPT-WP5SMF2"></script>
+
+    <script type="text/babel">
 
 
-        const App = <>Experimental</>
+      const App = <>Experimental</>
 
-        const rootElement = document.getElementById('app');
-        const root = ReactDOM.createRoot(rootElement)
-        root.render(App)
-      </script>
+      const rootElement = document.getElementById('app');
+      const root = ReactDOM.createRoot(rootElement)
+      root.render(App)
+    </script>
   </head>
 
   <body>
