--- a/index.html
+++ b/index.html
@@ -9,9 +9,31 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5HSESCHK4W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag () { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-5HSESCHK4W');
+    </script>
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-WP5SMF2"></script>
+
     <script type="text/babel">
 
-      const App = <>Experimental</>
+      const Items = () => <div>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./chrome.html">Chrome</a></li>
+          <li><a href="./firefox.html">Firefox</a></li>
+          <li><a href="./safari.html">Safari</a></li>
+          <li><a href="./noop.html">No-Op</a></li>
+        </ul>
+      </div>
+
+      const App = <>
+        <Items />
+      </>
 
       const rootElement = document.getElementById('app');
       const root = ReactDOM.createRoot(rootElement)
